[package]
name = "mm_map_tools"
version = "0.1.0"
authors = ["kolen <incredible.angst@gmail.com>"]
default-run = "viewer"
edition = "2018"

[lib]
name = "mm_map_tools"

[dependencies]
image = "0.23.1"
nalgebra = "0.19"
glib = "0.9.1"
mm_file_formats.path = "mm_file_formats"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[dependencies.gdk-pixbuf]
version = "0.8.0"
features = ["v2_32"]

[profile.dev]
opt-level = 1
package.image = { opt-level = 3 }
package.nalgebra = { opt-level = 2 }

[workspace]
members = [
  "mm_file_formats"
]