[package]
name = "mm_map_tools"
version = "0.1.0"
authors = ["kolen <incredible.angst@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1
package.image = { opt-level = 3 }
package.nalgebra = { opt-level = 2 }

[dependencies]
mm_map_viewer.path = "mm_map_viewer"

[workspace]
members = [
  "mm_file_formats",
  "mm_compression",
  "mm_compression_cli",
  "mm_map_rendering",
  "mm_map_viewer",
]