[package]
name = "mm_map_viewer"
version = "0.1.0"
edition = "2021"
description = "GUI viewer for Magic & Mayhem maps"

[dependencies]
glib = { version = "0.9.1", features = ["v2_58"] }
gtk = { version = "0.8.1", features = ["v3_16"] }
gio = { version = "0.8.0", features = ["v2_44"] }
gdk-pixbuf = { version = "0.8.0", features = ["v2_32"] }
image = "0.23.1"
mm_compression = { path = "../mm_compression" }
mm_file_formats = { path = "../mm_file_formats" }
mm_map_tools = { path = ".." }
